feat: complete multi-folder dashboard implementation and translations

--- a/src/renderer/src/locales/en.json
+++ b/src/renderer/src/locales/en.json
@@ -14,7 +14,38 @@
     "successMessage": "Successfully processed {{count}} files.",
     "failureMessage": "Failed to move {{count}} files.",
     "errors": "Errors",
-    "backToDashboard": "Back to Dashboard"
+    "backToDashboard": "Back to Dashboard",
+    "addFolder": "Add Folder",
+    "addFolderDesc": "Monitor a new folder to organize automatically.",
+    "path": "Path",
+    "name": "Name",
+    "autoWatch": "Monitor changes automatically",
+    "add": "Add",
+    "organize": "Organize",
+    "fileDetected": "New File Detected",
+    "folderAdded": "Folder added",
+    "scanError": "Scan failed",
+    "planError": "Failed to generate plan",
+    "executionSuccess": "Execution successful",
+    "executionError": "Execution failed",
+    "duplicatesDeleted": "Duplicates deleted",
+    "deleteError": "Failed to delete files",
+    "noFolders": "No folders managed yet.",
+    "folderSettingsTitle": "Folder Settings: {{name}}",
+    "folderSettingsDesc": "Select which rules apply to this folder.",
+    "noDescription": "No description",
+    "noRules": "No rules defined. Go to Settings/Rules to create some.",
+    "dashboardTitle": "Dashboard",
+    "dashboardDesc": "Manage your folders and organization rules.",
+    "statusWatching": "Watching",
+    "statusManual": "Manual",
+    "autoWatchEnabled": "Monitor changes automatically",
+    "autoWatchDisabled": "Only scan when I click organize",
+    "toggleWatch": "Toggle Watch",
+    "remove": "Remove",
+    "settingsRef": "Settings",
+    "watchEnabled": "Watch enabled",
+    "watchDisabled": "Watch disabled"
   },
   "folderSelector": {
     "title": "Organize your files",
