--- a/src/renderer/src/locales/fr.json
+++ b/src/renderer/src/locales/fr.json
@@ -14,7 +14,38 @@
     "successMessage": "{{count}} fichiers traités avec succès.",
     "failureMessage": "Échec du déplacement de {{count}} fichiers.",
     "errors": "Erreurs",
-    "backToDashboard": "Retour au Tableau de Bord"
+    "backToDashboard": "Retour au Tableau de Bord",
+    "addFolder": "Ajouter un Dossier",
+    "addFolderDesc": "Surveiller un nouveau dossier pour l'organiser automatiquement.",
+    "path": "Chemin",
+    "name": "Nom",
+    "autoWatch": "Surveiller les modifications automatiquement",
+    "add": "Ajouter",
+    "organize": "Organiser",
+    "fileDetected": "Nouveau fichier détecté",
+    "folderAdded": "Dossier ajouté",
+    "scanError": "Échec de l'analyse",
+    "planError": "Échec de la génération du plan",
+    "executionSuccess": "Exécution réussie",
+    "executionError": "Échec de l'exécution",
+    "duplicatesDeleted": "Doublons supprimés",
+    "deleteError": "Échec de la suppression des fichiers",
+    "noFolders": "Aucun dossier géré pour le moment.",
+    "folderSettingsTitle": "Paramètres du dossier : {{name}}",
+    "folderSettingsDesc": "Sélectionnez les règles à appliquer à ce dossier.",
+    "noDescription": "Pas de description",
+    "noRules": "Aucune règle définie. Allez dans Paramètres/Règles pour en créer.",
+    "dashboardTitle": "Tableau de Bord",
+    "dashboardDesc": "Gérez vos dossiers et règles d'organisation.",
+    "statusWatching": "Surveillance",
+    "statusManual": "Manuel",
+    "autoWatchEnabled": "Surveiller les modifications automatiquement",
+    "autoWatchDisabled": "Scanner uniquement lorsque je clique sur organiser",
+    "toggleWatch": "Activer/Désactiver la surveillance",
+    "remove": "Supprimer",
+    "settingsRef": "Paramètres",
+    "watchEnabled": "Surveillance activée",
+    "watchDisabled": "Surveillance désactivée"
   },
   "folderSelector": {
     "title": "Organisez vos fichiers",
