feat: Implement Smart Conflict Resolution (Skip, Overwrite, Rename)

--- a/src/renderer/src/locales/en.json
+++ b/src/renderer/src/locales/en.json
@@ -20,6 +20,11 @@
     "path": "Path",
     "name": "Name",
     "autoWatch": "Monitor changes automatically",
+    "conflictResolution": "Conflict Resolution",
+    "conflictResolutionDesc": "Choose how to handle files if the destination already exists.",
+    "conflictSkip": "Skip",
+    "conflictOverwrite": "Overwrite",
+    "conflictRename": "Rename (Keep Both)",
     "add": "Add",
     "organize": "Organize",
     "fileDetected": "New File Detected",
