--- a/src/renderer/src/locales/fr.json
+++ b/src/renderer/src/locales/fr.json
@@ -20,6 +20,11 @@
     "path": "Chemin",
     "name": "Nom",
     "autoWatch": "Surveiller les modifications automatiquement",
+    "conflictResolution": "Gestion des conflits",
+    "conflictResolutionDesc": "Choisir l'action si le fichier de destination existe déjà.",
+    "conflictSkip": "Ignorer",
+    "conflictOverwrite": "Écraser",
+    "conflictRename": "Renommer (Garder les deux)",
     "add": "Ajouter",
     "organize": "Organiser",
     "fileDetected": "Nouveau fichier détecté",
